# hcycling

./: .boring  Makefile  README  README.md  cycling-cgi.hs  cycling-chart.hs  hcycling.cabal
Cycling/: Analysis.hs  Cassette.hs  Chart.hs  Gearing.hs  HR.hs  Hr.hs  Interval.hs  Physiology.hs  Plot.hs  Power.hs  Solve.hs  T3C.hs  Temperature.hs  Time.hs  VAM.hs  Vam.hs  Velocity.hs  Weight.hs
cmd/: Makefile  cgi.hs  hcycling-cmd.cabal
css/: cycling.css
haskell/: Cycling.hs  Gearing.hs  Makefile  Physiology.hs  Power.hs  Solve.hs  Time.hs  VAM.hs  Velocity.hs  cycling-cgi.hs  cycling-chart.hs
haskell/Cycling/: Cassette.hs  Chart.hs  Gearing.hs  Physiology.hs  Power.hs  Solve.hs  Temperature.hs  Time.hs  VAM.hs  Velocity.hs  Weight.hs
hs/: Makefile
util/cues/: cues.html  cues.js  gen-cues.hs
util/cues/data/: e.0.json  e.1.json  e.2.json  e.3.json
