name:              hcycling
version:           0.20
description:       haskell cycling
author:            Rohan Drape
maintainer:        rd@rohandrape.net
stability:         Experimental
homepage:          http://rohandrape.net/t/hcycling
tested-with:       GHC == 8.8.4
build-type:        Simple
cabal-version:     >= 1.8

data-files:        README
                   css/*.css

library
  build-depends:   base >= 4.8,
                   csv,
                   frisby,
                   hmt-base == 0.20.*,
                   html-minus == 0.20.*,
                   old-locale,
                   split,
                   time,
                   www-minus == 0.20.*,
                   xml
  ghc-options:     -Wall -fwarn-tabs
  exposed-modules: Cycling.Analysis
                   Cycling.Cassette
                   Cycling.Chart
                   Cycling.Gearing
                   Cycling.HR
                   Cycling.Interval
                   Cycling.Physiology
                   Cycling.Power
                   Cycling.Solve
                   Cycling.Temperature
                   Cycling.Time
                   Cycling.VAM
                   Cycling.Velocity
                   Cycling.Weight

source-repository  head
  Type:            darcs
  Location:        http://rohandrape.net/sw/hcycling

-- Local Variables:
-- truncate-lines:t
-- End:
