name:              hcycling
version:           0.22
description:       haskell cycling
author:            Rohan Drape
maintainer:        rd@rohandrape.net
stability:         Experimental
homepage:          http://rohandrape.net/t/hcycling
tested-with:       GHC == 9.12.2
build-type:        Simple
cabal-version:     >= 1.8

data-files:        README.md
                   css/*.css

library
  build-depends:   base >= 4.8,
                   csv,
                   hmt-base == 0.22.*,
                   html-minus == 0.22.*,
                   old-locale,
                   parsec,
                   split,
                   time,
                   www-minus == 0.22.*,
                   xml
  ghc-options:     -Wall -fwarn-tabs -Wno-x-partial -Wno-incomplete-uni-patterns
  exposed-modules: Cycling.Analysis
                   Cycling.Cassette
                   Cycling.Chart
                   Cycling.Gearing
                   Cycling.Hr
                   Cycling.Interval
                   Cycling.Physiology
                   Cycling.Power
                   Cycling.Solve
                   Cycling.Temperature
                   Cycling.Time
                   Cycling.Vam
                   Cycling.Velocity
                   Cycling.Weight

source-repository  head
  Type:            darcs
  Location:        http://rohandrape.net/sw/hcycling

-- Local Variables:
-- truncate-lines:t
-- End:
