name:              hcycling-cmd
version:           0.16
description:       haskell cycling CLI
author:            Rohan Drape
maintainer:        rd@slavepianos.org
stability:         Experimental
homepage:          http://rd.slavepianos.org/t/hcycling
tested-with:       GHC == 7.10.3
build-type:        Simple
cabal-version:     >= 1.8

source-repository  head
  Type:            darcs
  Location:        http://rd.slavepianos.org/sw/hcycling

Executable         hycling-cgi
 Main-Is:          cgi.hs
 Build-Depends:    base,hcycling,www-minus
